<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 <group android:checkableBehavior="single">
     <item android:id="@+id/gallery"
         android:icon="@drawable/ic_menu_gallery"
         android:title="@string/app_kategoriler"/>
     <item android:id="@+id/fileimport"
         android:icon="@drawable/ic_menu_camera"
         android:title="@string/app_urunler"/>
     <item android:id="@+id/slideshow"
         android:icon="@drawable/ic_slideshow_black_24dp"
         android:title="@string/app_yorumlar"/>
     <item android:id="@+id/navtools"
         android:icon="@drawable/ic_build_black_24dp"
         android:title="@string/app_tools"/>
 </group>
    <item android:title="@string/app_communicate">
        <menu>
            <item android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/app_share"/>
            <item android:id="@+id/send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/app_send"/>
        </menu>
    </item>
</menu>