<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3839bb"
    tools:context=".LoginKaydi">
    <ImageView
        android:layout_width="198dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        app:srcCompat="@drawable/ic_done_all_black_24dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Firebase Tutorial"
        android:layout_marginTop="161dp"
        android:textSize="22dp"
        android:textColor="@color/White"/>
    <EditText
        android:id="@+id/register_adi"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="227dp"
        android:hint="Kullanici Adı"
        android:textColorHint="@color/White"
        android:background="@drawable/editext_background"
        android:ems="10"
        android:textColor="@color/White"
        android:inputType="text" />
    <EditText
        android:id="@+id/register_mail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="287dp"
        android:hint="Email"
        android:textColorHint="@color/White"
        android:background="@drawable/editext_background"
        android:ems="10"
        android:textColor="@color/White"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_sifre"
        android:hint="Sifre"
        android:textColorHint="@color/White"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/editext_background"
        android:ems="10"
        android:layout_marginTop="347dp"
        android:textColor="@color/White"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/register_btn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="405dp"
        android:background="@drawable/button_background"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/register_need"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="445dp"
        android:text="@string/login_need"
        android:textColor="@color/White"
        android:textSize="20dp"
        tools:text="@string/reg_to_login" />


</RelativeLayout>